# adeno_predict

./: .gitignore  CHANGELOG.md  LICENSE.md  LICENSE.txt  README.md  dataset_example.csv  features_detail.md  pyproject.toml  run_windows.bat  streamlit_app.py
.github/workflows/: ci.yml
adenopredict/: __init__.py  constants.py  estimators.py  inference.py  preprocessing.py
app/: __init__.py  components.py  config.py  data.py  hide_header.py  layout.py  metrics.py  model.py  pages.py  service.py  types.py  utils.py
clone_repository/: df_adjustment.py  df_check_requirements.py  df_example.xlsx  info_update.md  machine_learning_clone.py  model_apply.py  repository_clone.md  requirements.txt
dataset/: dataset_example.csv  dataset_general.csv  features_details.md
examples/: best_model_svm.pkl  df_example.csv  model_apply.py  repository_clone.md
imputation/: imputation_code.md
metrics/: bootstrap_code.md  metrics_bootstrap.md  statistic_methods_formula.md
metrics_boot/: metrics_boot.md
results/: df_prediction-results.csv
tests/: conftest.py  test_estimators.py  test_inference.py  test_preprocessing.py  test_service.py
workflow_algorithms/: algorithms_parameters.md  leave_one_out_code.md
